<resources>
    <string name="app_name">UdeskDemo</string>
    <string name="udesk_help_tips">帮助中心</string>
    <string name="udesk_conversion_tips">咨询会话</string>
    <string name="udesk_form_tips">留言表单</string>
    <string name="udesk_utils_tips">开发者功能</string>
    <string name="udesk_reset_init">重置域名和App Key</string>
    <string name="udesk_from_agentid">指定分配客服</string>
    <string name="udesk_from_groupid">指定分配客服组</string>
    <string name="udesk_unread_msg">获取未读消息</string>
    <string name="udesk_unread_msgcount">获取未读消息数量</string>
    <string name="udesk_update_userinfo">更新客户信息</string>
    <string name="udesk_update_uitemplemt">更换UI模板</string>
    <string name="udesk_conversion_bysetting_menu">咨询菜单</string>
    <string name="udesk_send_commodity_link">发送商品链接</string>

    <string name="udesk_update_nick_name">姓名</string>
    <string name="udesk_update_hint_nick_name">请输入客户姓名</string>

    <string name="udesk_update_email">邮箱</string>
    <string name="udesk_update_hint_email">请输入客户邮箱</string>

    <string name="udesk_update_tel">电话</string>
    <string name="udesk_update_hint_tel">请输入客户电话</string>

    <string name="udesk_update_des">描述</string>
    <string name="udesk_update_hint_des">请输入描述内容</string>
</resources>
