<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/android:white"
        android:orientation="vertical">

        <cn.udesk.widget.UdeskTitleBar
            android:id="@+id/udesktitlebar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:id="@+id/udesk_by_agentid"
            android:layout_width="fill_parent"
            android:layout_height="62dip"
            android:onClick="onClick">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dip"
                    android:layout_height="20dip"
                    android:src="@mipmap/udesk_agent_id" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:gravity="center"
                    android:text="@string/udesk_from_agentid"
                    android:textColor="#333333"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="8dip"
                android:layout_height="15dip"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="16dp"
                android:src="@mipmap/udesk_redict_img" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="16dp"
            android:background="#E4E7F0" />

        <RelativeLayout
            android:id="@+id/udesk_by_groupid"
            android:layout_width="fill_parent"
            android:layout_height="62dip"
            android:onClick="onClick">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dip"
                    android:layout_height="20dip"
                    android:src="@mipmap/udesk_agentgroupid" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:gravity="center"
                    android:text="@string/udesk_from_groupid"
                    android:textColor="#333333"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="8dip"
                android:layout_height="15dip"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="16dp"
                android:src="@mipmap/udesk_redict_img" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="16dp"
            android:background="#E4E7F0" />

        <RelativeLayout
            android:id="@+id/udesk_unread_msg"
            android:layout_width="fill_parent"
            android:layout_height="62dip"
            android:onClick="onClick">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dip"
                    android:layout_height="20dip"
                    android:src="@mipmap/udesk_unread_msg" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:gravity="center"
                    android:text="@string/udesk_unread_msg"
                    android:textColor="#333333"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="8dip"
                android:layout_height="15dip"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="16dp"
                android:src="@mipmap/udesk_redict_img" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="16dp"
            android:background="#E4E7F0" />

        <RelativeLayout
            android:id="@+id/udesk_unread_msgcount"
            android:layout_width="fill_parent"
            android:layout_height="62dip"
            android:onClick="onClick">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dip"
                    android:layout_height="20dip"
                    android:src="@mipmap/udesk_unread_msgcount" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:gravity="center"
                    android:text="@string/udesk_unread_msgcount"
                    android:textColor="#333333"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="8dip"
                android:layout_height="15dip"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="16dp"
                android:src="@mipmap/udesk_redict_img" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="16dp"
            android:background="#E4E7F0" />

        <RelativeLayout
            android:id="@+id/udesk_update_userinfo"
            android:layout_width="fill_parent"
            android:layout_height="62dip"
            android:onClick="onClick">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dip"
                    android:layout_height="20dip"
                    android:src="@mipmap/udesk_update_userinfo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:gravity="center"
                    android:text="@string/udesk_update_userinfo"
                    android:textColor="#333333"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="8dip"
                android:layout_height="15dip"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="16dp"
                android:src="@mipmap/udesk_redict_img" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="16dp"
            android:background="#E4E7F0" />

        <RelativeLayout
            android:id="@+id/udesk_update_ui"
            android:layout_width="fill_parent"
            android:layout_height="62dip"
            android:onClick="onClick">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dip"
                    android:layout_height="20dip"
                    android:src="@mipmap/udesk_update_ui" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:gravity="center"
                    android:text="@string/udesk_update_uitemplemt"
                    android:textColor="#333333"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="8dip"
                android:layout_height="15dip"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="16dp"
                android:src="@mipmap/udesk_redict_img" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="16dp"
            android:background="#E4E7F0" />

        <RelativeLayout
            android:id="@+id/udesk_conversion_bysetting_menu"
            android:layout_width="fill_parent"
            android:layout_height="62dip"
            android:onClick="onClick">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dip"
                    android:layout_height="20dip"
                    android:src="@mipmap/udesk_conversion_bysetting_menu" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:gravity="center"
                    android:text="@string/udesk_conversion_bysetting_menu"
                    android:textColor="#333333"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="8dip"
                android:layout_height="15dip"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="16dp"
                android:src="@mipmap/udesk_redict_img" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="16dp"
            android:background="#E4E7F0" />

        <RelativeLayout
            android:id="@+id/udesk_send_commodity_link"
            android:layout_width="fill_parent"
            android:layout_height="62dip"
            android:onClick="onClick">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dip"
                    android:layout_height="20dip"
                    android:src="@mipmap/udesk_send_commodity_link" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:gravity="center"
                    android:text="@string/udesk_send_commodity_link"
                    android:textColor="#333333"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="8dip"
                android:layout_height="15dip"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="16dp"
                android:src="@mipmap/udesk_redict_img" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="16dp"
            android:background="#E4E7F0" />

        <RelativeLayout
            android:id="@+id/udesk_sdkpush"
            android:layout_width="fill_parent"
            android:layout_height="62dip"
            android:onClick="onClick">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dip"
                    android:layout_height="20dip"
                    android:src="@mipmap/udesk_push" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:gravity="center"
                    android:text="@string/udesk_setting_push"
                    android:textColor="#333333"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="8dip"
                android:layout_height="15dip"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="16dp"
                android:src="@mipmap/udesk_redict_img" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="16dp"
            android:background="#E4E7F0" />
    </LinearLayout>


</ScrollView>
